--- a/Website/css/main.css
+++ b/Website/css/main.css
@@ -49,3 +49,7 @@ css_selector {
 class/id attributes to set properties of only certain tags
 this is a comment and is ignored
 */
+div {
+    display: block;
+    color: gray
+}
