--- a/Website/css/main.css
+++ b/Website/css/main.css
@@ -9,6 +9,11 @@ body {
     width: 1000px; /* many units for width */
 }
 
+@media only screen and (max-width: 600px) {
+    body {
+      width: 500px;
+    }
+
 h1 {
     text-align: center;
 }
