--- a/Website/css/main.css
+++ b/Website/css/main.css
@@ -9,6 +9,12 @@ body {
     width: 1000px; /* many units for width */
 }
 
+@media only screen and (max-width: 400px) {
+    body {
+      width: 400px;
+    }
+  }
+
 h1 {
     text-align: center;
 }
@@ -68,5 +74,5 @@ p.special {
 }
 
 p.insta {
-    background-color: pink;
+    background-color: red;
 }
