Revert "Update main.css"
This reverts commit d9e62227d9dd6053c5236522b2f51191090efabd.

--- a/Website/css/main.css
+++ b/Website/css/main.css
@@ -9,12 +9,6 @@ body {
     width: 1000px; /* many units for width */
 }
 
-@media only screen and (max-width: 400px) {
-    body {
-      width: 400px;
-    }
-  }
-
 h1 {
     text-align: center;
 }
@@ -74,5 +68,5 @@ p.special {
 }
 
 p.insta {
-    background-color: red;
+    background-color: pink;
 }
